<resources>
    <string name="app_name">Prank Sounds</string>
    <string name="animal">animal</string>
    <string name="category_name">Category Name</string>
    <string name="time_sample">00:00:00</string>
    <string name="play_sound">Play Sound</string>
    <string name="loop">Loop</string>
    <string name="auto_play">Auto Play</string>


    <!--    <string name="app_id">ca-app-pub-5405304698167359~1479721136</string>
        <string name="interstitial_id">ca-app-pub-5405304698167359/2713460492</string>
        <string name="banner_ad">ca-app-pub-5405304698167359/6652705501</string>
        <string name="admob_native_MAIN">ca-app-pub-5405304698167359/5148052145</string>  -->

    <string name="human">human</string>
    <string name="machine">machine</string>
    <string name="sound">Sound</string>
    <string name="sounds"> Sounds</string>
    <string name="loading_ad">Ad Loading..</string>
    <string name="exit_screen">Exit App</string>
    <string name="in_app_purchase">remove_ads_funny_sounds</string>


    <string-array name="humanSubCategory">
        <item>fart</item>
        <item>cough</item>
        <item>sneeze</item>
        <item>burp</item>
        <item>baby</item>
        <item>witch</item>
        <item>crying</item>
        <item>kissing</item>
        <item>clap</item>
        <item>police</item>
    </string-array>


    <string-array name="machineSubCategory">
        <item>trimmer</item>
        <item>horn</item>
        <item>police</item>
        <item>flush</item>
        <item>shooting</item>
        <item>blender</item>
        <item>drilling</item>
        <item>bot</item>

    </string-array>

    <string-array name="animalSubCategory">
        <item>dog</item>
        <item>cat</item>
        <item>chicken</item>
        <item>sheep</item>
        <item>donkey</item>
        <item>horse</item>
        <item>cow</item>
        <item>rat</item>

    </string-array>
    <string-array name="time_slabs">
        <item>off</item>
        <item>10s</item>
        <item>15s</item>
        <item>30s</item>
        <item>45s</item>
        <item>60s</item>
    </string-array>

</resources>